# app/models/ability.rb
@@ -6,5 +6,6 @@ class Ability
   def initialize(user)
     can :create, Order if user.is_shopper?
     can :complete, Order if user.is_merchant?
+    can :read, Disbursement if user.is_merchant?
   end
 end
